--- a/spam_SMS_detector/SMS_SPAM_DETECTOR.ipynb
+++ b/spam_SMS_detector/SMS_SPAM_DETECTOR.ipynb
@@ -511,11 +511,23 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "import nltk\n",
+   "source": ["import nltk\n",
+"\n",
+"import ssl\n",
+"\n",
+"try:\n",
+"\n",
+   " _create_unverified_https_context = ssl._create_unverified_context\n",
+   "\n",
+"except AttributeError:\n",
     "\n",
-    "nltk.download('punkt')\n",
-    "\n",
+    "pass\n",
+"else:\n",
+"\n",
+    "ssl._create_default_https_context = _create_unverified_https_context\n",
+"\n",
+"nltk.download()\n"
+"\n",
     "df['num_characters'] = df['text'].apply(len)\n",
     "\n",
     "df['num_words'] = df['text'].apply(lambda x:len(nltk.word_tokenize(x)))\n",
