--- a/spam_SMS_detector/SMS_SPAM_DETECTOR.ipynb
+++ b/spam_SMS_detector/SMS_SPAM_DETECTOR.ipynb
@@ -514,20 +514,7 @@
    "source": [
     "import nltk\n",
     "\n",
-    "import ssl\n",
-    "\n",
-    "try:\n",
-    "\n",
-       " _create_unverified_https_context = ssl._create_unverified_context\n",
-       "\n",
-    "except AttributeError:\n",
-        "\n",
-        "pass\n",
-    "else:\n",
-    "\n",
-        "ssl._create_default_https_context = _create_unverified_https_context\n",
-    "\n",
-    "nltk.download()\n"
+    "nltk.download(punkt)\n",
     "\n",
     "df['num_characters'] = df['text'].apply(len)\n",
     "\n",
