--- a/spam_SMS_detector/SMS_SPAM_DETECTOR.ipynb
+++ b/spam_SMS_detector/SMS_SPAM_DETECTOR.ipynb
@@ -514,7 +514,7 @@
    "source": [
     "import nltk\n",
     "\n",
-    "nltk.download(punkt)\n",
+    "nltk.download('punkt')\n",
     "\n",
     "df['num_characters'] = df['text'].apply(len)\n",
     "\n",
